styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --clr-primary: 180deg 66% 49%;
        --clr-primary-o: 180deg 66% 83%;
        --clr-tertiary: 257deg 27% 26%;
        --clr-secondary: 0deg 87% 67%;
        --clr-surface-l: 255deg 11% 22%;
        --clr-surface-d: 260deg 8% 14%;
        --clr-neutral-l: 0deg 0% 75%;
        --clr-neutral-d: 257deg 7% 63%;
    }

    html {
        overflow-x: hidden;
        overflow-y: scroll;
        -webkit-text-size-adjust: none; /* for iOS Safari */
        text-size-adjust: none; /* for other mobile browsers */
    }

    html:focus-within {
        scroll-behavior: smooth;
    }

    body {
        min-height: 100vh;
        max-width: 100vw;
        overflow-x: clip;
        text-rendering: optimizeSpeed;
        font-weight: 500;
        font-family: "Poppins", system-ui, sans-serif;
        word-wrap: break-word;
        background-image: conic-gradient(
            from 0turn at 150% -20%,
            #fff,
            #fff 230deg,
            hsl(var(--clr-primary-o)) 247deg,
            #fff 250deg
        );
        background-attachment: fixed;
    }
    main {
        min-height: calc(100vh - 40rem);
    }

    @media screen and (min-width: 1280px) {
        main {
            min-height: calc(100vh - 16rem);
        }
    }

    /* Add pointer cursors to interactive elements  */
    label:not([disabled]),
    button:not([disabled]),
    select:not([disabled]),
    summary:not([disabled]),
    [type="radio"]:not([disabled]),
    [type="submit"]:not([disabled]),
    [type="checkbox"]:not([disabled]) {
        cursor: pointer;
    }

    [disabled] {
        cursor: not-allowed;
    }

    /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
    @media (prefers-reduced-motion: reduce) {
        html:focus-within {
            scroll-behavior: auto;
        }

        *,
        *::before,
        *::after {
            animation-duration: 0.01ms !important;
            animation-iteration-count: 1 !important;
            transition-duration: 0.01ms !important;
            scroll-behavior: auto !important;
        }
    }

    /* custom scrollbar */
    ::-webkit-scrollbar {
        width: 0.5rem;
    }

    ::-webkit-scrollbar-track {
        @apply bg-primary-600;
        border-radius: 100px;
    }

    ::-webkit-scrollbar-thumb {
        @apply bg-primary-500;
        border-radius: 100px;
    }

    .dark ::-webkit-scrollbar-track {
        @apply bg-primary-600;
        border-radius: 100px;
    }

    .dark ::-webkit-scrollbar-thumb {
        @apply bg-primary-500;
        border-radius: 100px;
    }

    h1 {
        @apply text-3xl font-bold xl:text-6xl;
    }

    h2 {
        @apply text-xl font-bold xl:text-4xl;
    }
    h3 {
        @apply text-lg font-bold xl:text-2xl;
    }
    h4 {
        @apply font-bold;
    }

    .input-transition {
        transition: color 300ms ease-in, background-color 300ms ease-in,
            transform 300ms ease-in, font-size 300ms ease-in 100ms;
    }
}

